# dida

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  compact_log.txt  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: config.rs  draft.rs  mod.rs  setup.rs
src-tauri/src/core/: core.rs  handle.rs  hotkey.rs  mod.rs
src-tauri/src/core/cmd/: action.rs  mod.rs  task.rs
src-tauri/src/core/tray/: mod.rs
src-tauri/src/feat/: action.rs  mod.rs  window.rs
src-tauri/src/process/: async_handler.rs  mod.rs
src-tauri/src/schema/: action.rs  dto.rs  mod.rs  state.rs  task.rs
src-tauri/src/store/: db.rs  mod.rs  module.rs
src-tauri/src/utils/: dirs.rs  help.rs  init.rs  logging.rs  mod.rs  resolve.rs
src/components/Context/: Msg.tsx
src/components/Invoke/: SubmitAction.tsx
src/components/Layout/: AppLayout.tsx  Footer.tsx  Header.tsx
src/components/RichTextEditor/: editor.ts  index.tsx
src/components/TaskList/: index.css  index.tsx
src/components/TaskList/TaskItem/: index.tsx
src/pages/: ActionModify.tsx  Dashboard.tsx  Home.tsx  Settings.tsx  TaskModify.tsx  TodoList.tsx
src/pages/Home/: index.tsx
src/pages/Home/Dashboard/: index.tsx  style.css
src/pages/Home/Dashboard/Monthly/: index.tsx
src/pages/Home/Dashboard/Today/: index.tsx
src/pages/Home/Today/: index.tsx
src/pages/Home/View/: index.tsx
src/routers/: index.tsx
src/types/: action.ts  index.ts  task.ts
src/utils/: index.ts
(+3 files in other folders)
