[package]
name = "dida"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dida_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
serde_json = "1"
serde_yaml = "^0.9"
parking_lot = "0.12"
once_cell = "1.21.1"
anyhow = "1.0.97"
tokio = { version = "1.44", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
log = "0.4"
tauri-plugin-shell = "2.2.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
chrono = "^0.4"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

